# heytoday

./: .gitignore  AGENTS.md  CLAUDE.md  Content_Safety_Policy_v0.1.md  PRD_v0.6.md  PRD_v0.7.md  PRD_v0.8.md  PRD_v0.9.md  Product_Methodology.md  Writing_Kit.md  孩子反应日志.md  正式文档索引.md
tts/: README.md  (+3 more)
新闻采集/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  news-source-ingestion-plan-v0.4.md  news-source-ingestion-plan-v0.5.md  news-source-ingestion-plan-v0.6.md  news-source-ingestion-plan-v0.7.md  news-source-ingestion-plan-v0.8.md  pg_tunnel.py  pyproject.toml  run-via-tunnel.sh  测试Kimi连接.py
新闻采集/config/: filters.toml  logging.toml  sources.toml
新闻采集/migrations/: README.md  env.py
新闻采集/migrations/versions/: 0001_initial.py  0002_article_duplicate_basis.py  0003_supabase_runtime.py  0004_supabase_security.py  0005_business_task_audit.py
新闻采集/output/: 2026-07-11_run_decisions.md  20260711_174335_news_material.json  20260711_174335_news_material.md  20260712_110201_news_material.md  20260713_181911_news_material.json  20260713_181911_news_material.md  20260715_190730_news_material.json  20260715_190730_news_material.md  INDEX.md  latest_news_material.json
新闻采集/prompts/: news_relevance_v1.md  news_scoring_v1.md  risk_review_v1.md
新闻采集/sql/: supabase_news_material_schema.sql
新闻采集/tests/: conftest.py  test_audit_cli_commands.py  test_audit_contract.py  test_audit_logging.py  test_audit_postgres.py  test_audit_repository.py  test_audit_service.py  test_audit_view.py  test_cleaners.py  test_cli.py  test_clustering.py  test_collectors.py  test_db.py  test_dedup.py  test_export_review.py  test_fetch_idempotency.py  test_http.py  test_llm.py  test_lock.py  test_pipeline_audit.py  test_pipeline_e2e.py  test_source_configs.py  test_supabase_sync.py
(+279 files in other folders)
